Update wiki page TransformingRules through web user interface.

--- a/wiki/TransformingRules.wiki
+++ b/wiki/TransformingRules.wiki
@@ -2,7 +2,4 @@
 
 = Translation JSON =
 
-1. The root element will be absorbed, for there is only one
-`<root>test</root>`
-   becomes
-`"test"`
+1. The root element will be absorbed, for there is only one `<root>test</root>` becomes `"test"`
