Finished moving all the other tests into unittest.

--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-For readme, see the wiki: http://code.google.com/p/xml2json-xslt/wiki/TransformingRules
-
+For more information, please read our wiki:
+http://code.google.com/p/xml2json-xslt/wiki/TransformingRules
