Added more information to the README

--- a/README
+++ b/README
@@ -1,2 +1,12 @@
+XML2JSON-XSLT
+-------------
+
+These are XSLT stylesheets that transform arbitrary XML to JSON (and JS).
+
 For more information, please read our wiki:
 http://code.google.com/p/xml2json-xslt/wiki/TransformingRules
+
+If you are interested in running the test cases, please check out a
+copy of our source from SVN:
+http://code.google.com/p/xml2json-xslt/source/checkout
+
